# alexa-replacement

./: .gitignore  README.md  alexareplacement.py  app.py  commands.py  player.py  pyproject.toml  recognizer.py  requirements.txt  tts.py
