[project]
name = "alexa-replacement"
version = "0.1.0"
description = "Voice-activated YouTube assistant using Vosk, Selenium, PyAudio, and pyttsx3"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "selenium",
  "vosk",
  "PyAudio",
  "pyttsx3",
]

[tool.uv]
# No special configuration needed; uv will manage the virtualenv and lockfile.


