[project]
name = "alexa-replacement"
version = "0.1.0"
description = "Voice-activated YouTube assistant using Vosk, yt-dlp, PyAudio, and pyttsx3"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "vosk",
  "PyAudio",
  "pyttsx3",
  "yt-dlp",
]

[project.scripts]
alexa-replacement = "app:main"

[tool.uv]
# No special configuration needed; uv will manage the virtualenv and lockfile.


